--- a/config/ModulesMapping.jsonc
+++ b/config/ModulesMapping.jsonc
@@ -1,5 +1,5 @@
 {
-  "Applications": "^applicationTemplates\\.|^applications\\.|^servicePrincipals\\.|^onPremisesPublishingProfiles\\.|^users.appRoleAssignment$|^groups.appRoleAssignment$",
+  "Applications": "^applicationTemplates\\.|^applications\\.|^servicePrincipals\\.|^onPremisesPublishingProfiles\\.|^users.appRoleAssignment$|^groups.appRoleAssignment$"
   // "Bookings": "^solutions\\.|^bookingBusinesses\\.|^bookingCurrencies\\.",
   // "Calendar": "^places\\.|^users.calendar$|^users.calendarGroup$|^users.event$|^groups.calendar$|^groups.event$",
   // "ChangeNotifications": "^subscriptions\\.",
