--- a/.azure-pipelines/weekly-examples-update.yml
+++ b/.azure-pipelines/weekly-examples-update.yml
@@ -78,6 +78,8 @@ jobs:
       targetType: inline
       pwsh: true
       script: |
+        git config --global user.email "timwamalwa@gmail.com"
+        git config --global user.name "Timothy Wamalwa"
         git status
         git add .
         git commit -m "Updating examples"
